# budgie-action-buttons

./: README.md  meson.build
data/: ActionButtons.plugin  meson.build
icons/: meson.build
schema/: com.github.samlane-ma.budgie-action-buttons.gschema.xml
src/: ActionButtons.vala  ButtonBox.vala  meson.build
src/buttons/: action-button.vala  airplane-button.vala  screenclip-button.vala
src/editor/: editor.vala  iconpicker.vala  meson.build
vapi/: config.vapi
